fixed overflow text

--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,17 @@
 }
 .subject {
   position: relative;
-  width: 375px;
+  width: 350px;
   height: 25px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .date {
   position: relative;
   width: 50px;
   height: 25px;
+  left: 30px;
 }
 .email-text {
   position: relative;
@@ -29,4 +33,7 @@
   height: 25px;
   top: 5px;
   color: grey;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
